Wrap wide pre tags to avoid horizontal scrolling

--- a/app/assets/stylesheets/_structure/_main.scss
+++ b/app/assets/stylesheets/_structure/_main.scss
@@ -48,6 +48,7 @@ pre {
   line-height: 1.5em;
   margin-top: -.25rem;
   font-family: "Source Code Pro"
+  white-space: pre-wrap;
 }
 
 .repo-header {
